# mcpzim

./: .gitignore  EVAL_HARNESS.md  EXTENDED_CONTEXT_EVAL.md  HOW_TO_BUILD.md  LICENSE  ON_DEVICE_MODEL_REPORT_2026-04-23.md  QWEN35_HYBRID_CACHE.md  README.md  TOOL_DESIGN.md  pyproject.toml
docs/: ARCHITECTURE.md  STREETZIM_CONSUMPTION.md
ios/: KV_CACHE_COMPRESSION.md  OPTIMIZATIONS.md  README.md  STATUS.md  project.yml
ios/MCPZimChat/: Info-Mac.plist  Info.plist  MCPZimChat.entitlements
ios/MCPZimChat.xcodeproj/: project.pbxproj
ios/MCPZimChatMacTests/: ConversationalEvalTests.swift  GemmaToolEmissionTests.swift  MultiModelEvalTests.swift  ZimfoIntentsTests.swift
ios/MCPZimEval/: EvalCLI.swift  EvalHarness.swift  LlamaCppProbeCLI.swift  ProbeCompareCLI.swift  ProbeE2ECLI.swift
ios/scripts/: mcp-crashes.sh  mcp-logs.sh  mcp-report.sh
ios/tools/: eval.sh
mcpzim/: __init__.py  cli.py  content.py  geocode.py  library.py  routing.py  server.py
mobile/android/: README.md
swift/: Package.swift  README.md
tests/: test_content.py  test_geocode.py  test_library.py  test_routing.py
tools/fine-tune/: .gitignore  DATA_RECIPE.md  MODEL_ANALYSIS.md  README.md  STATE_2026-04-25.md  eval_ft_pcgaming.sh  finetune.sh  finetune_cuda.py  finetune_cuda.sh  finetune_unsloth.py  finetune_unsloth.sh  generate.py  generate_chains.py  generate_places_diverse.py  train_all.sh  train_all_cuda.sh  train_chains.jsonl  train_chains_3090.jsonl  train_chains_3090b.jsonl  train_chains_3090c.jsonl  train_chains_studio.jsonl  train_chains_studio2.jsonl  train_compare_v2.jsonl  (+5 more)
(+129 files in other folders)
