[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpzim"
version = "0.1.0"
description = "MCP server that exposes ZIM files (Wikipedia, mdwiki, streetzim, ...) to local LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mcpzim contributors" }]
keywords = ["mcp", "zim", "kiwix", "wikipedia", "mdwiki", "streetzim", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp[cli]>=1.2",
    "libzim>=3.4",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mcpzim = "mcpzim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcpzim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
